--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -2,11 +2,13 @@
 %h1 All Movies
 
 %table#movies
+  
+
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ("hilite" if params[:sort] == "title")}= link_to 'Movie Title', movies_path(:sort => 'title'), :id => 'title_header'
       %th Rating
-      %th Release Date
+      %th{:class => ("hilite" if params[:sort] == "release_date")}= link_to 'Release Date', movies_path(:sort => 'release_date'), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
@@ -15,5 +17,6 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
+  
 
 = link_to 'Add new movie', new_movie_path
